# django-cavalry

./: .pre-commit-config.yaml  .travis.yml  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml
cavalry/: db.py  db_common.py  db_django2.py  db_django3.py  locals.py  middleware.py  policy.py  poster.py  reporter.py  stack.py  timing.py
cavalry_tests/: settings.py  urls.py  wsgi.py
cavalry_tests/templates/: index.html
cavalry_tests/tests/: test_cavalry.py
