[metadata]
name = django-cavalry
version = attr:cavalry.__version__
author = Valohai
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT
description = Performance tracer middleware for Django
url = https://github.com/valohai/django-cavalry

[options]
packages = find:
install_requires =
    Django>=2.0
include_package_data = True
python_requires = >=3.6
tests_require =
    black
    flake8
    isort
    pydocstyle
    pytest-cov
    pytest-django>=3.7.0
    requests-mock

[options.extras_require]
poster =
    requests
dev =
    black
    flake8
    isort
    pydocstyle
    pytest-cov
    pytest-django>=3.7.0
    requests-mock

[flake8]
max-line-length = 119
max-complexity = 10
ignore = E203,E231,W503

[tool:pytest]
DJANGO_SETTINGS_MODULE = cavalry_tests.settings
norecursedirs = .git .tox

[isort]
profile = black
multi_line_output = 3
